HEAD
	+ EBox::Validate::checkEmailAddress does not ignore any longer white spaces
	  at the begin and end og the address
3.0.7
	+ More flexibility for printable message in EBox::Exceptions::DataExists
	+ Use silentRoot in EBox:FileSystem::dirIsEmpty to avoid log
	  exception error
	+ EBox::NetWrappers::_ifaceShowAddress now works for peer-to-peer addresses
3.0.6
	+ Added EBox::Validate::checkRegex function
	+ Added EBox::FileSystem::mountPointIsMounted function
	+ EBox::Sudo now writes correctly commands file with utf8 characters
3.0.5
	+ Get default language from /etc/default/locale
	+ Configure Log4perl to use utf8
	+ Do not try to log default locale message when logger is not initialized
	+ Added "use utf8" to Gettext needed for the language string literals
	+ Decode utf8 strings from gettext
	+ Removed unnecessary utf8::decode calls in exceptions
	+ Fixed EBox::Gettext for undef and empty strings
3.0.4
	+ Added EBox::setLocaleEnvironment method
3.0.3
	+ Use default 'C' locale when locale configuration file is empty
	+ New UnwillingToPerform exception. Thrown when the user requests
	  an action that cannot be performed for any reason
	+ Added Yoruba language
3.0.2
	+ Added EBox::Sudo::system as equivalent to system() with root permissions
3.0.1
	+ Removed forced setting of LANG variables which made progress indicator
	  fail when using any language different to English
3.0
	+ Set debug = no by default for final release
	+ Some minor improvements in EBox::Gettext and proper set of LANG variables
2.3.10
	+ Fixed EBox::Config::Version method
2.3.9
	+ Add uid function to return the uid of the zentyal user
	+ Added EBox::FileSystem::unusedFileName() to find free file names
2.3.8
	+ Added new EBox::trace() method to easily log stack traces when debugging
2.3.7
	+ Added method EBox::FileSystem::isDirEmpty
	+ Better logging of sudo commands in debug including process name and PID
	+ Better exclusion of non-device filesystems in
	  EBox::FileSystem::partitionsFileSystems