@@ -3230,6 +3230,8 @@ sub _preSetConf
             }
         }
     }
+
+    EBox::NetWrappers::clean_ifaces_list_cache();
 }
 
 sub _daemons
@@ -3292,6 +3294,7 @@ sub _enforceServiceState
         }
         unlink (IFUP_LOCK_FILE);
     }
+    EBox::NetWrappers::clean_ifaces_list_cache();
 
     EBox::Sudo::silentRoot('/sbin/ip route del default table default',
                            '/sbin/ip route del default');
