@@ -1,3 +1,5 @@
+HEAD
+	+ Flush interfaces list cache after all ifups and all ifdowns
 3.0.9
 	+ Set proper file name for HTTP proxy configuration for APT
 	+ Set HTTP proxy wide settings in /etc/environment
